navbar fixed & adjust gaps b/w sections

--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,9 @@ body {
     transform: translateY(-10px);
   }
 }
-
+html {
+  scroll-behavior: smooth;
+}
 
 .scroll-container {
   width: 100vw;
